--- a/client/index.html
+++ b/client/index.html
@@ -24,58 +24,58 @@
       <div class="d-flex flex-column justify-content-around p-1 element-border">
         <div class="row">
           <div class="col-5 text-black-50">Temperature [°C]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">Humitity [%]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">Pressure [hPa]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">QFE [hPa]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">QNH [hPa]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">Wind Direction [kts]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">Wind Speed [kts]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">Cross Wind [kts]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">Head Wind [kts]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">Elevation [ft]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
         <div class="row">
           <div class="col-5 text-black-50">Runway Heading [°]</div>
-          <div class="col-3">0123456789</div>
-          <div class="col-3">0123456789</div>
+          <div class="col-3">---</div>
+          <div class="col-3">---</div>
         </div>
       </div>
       <div
@@ -87,8 +87,8 @@
           <div class="text-black-50">Wind Speed [mean]</div>
         </div>
         <div class="d-flex flex-row justify-content-around">
-          <div id="windDirectionMean" class="">123</div>
-          <div id="windspeedMean" class="">456</div>
+          <div id="windDirectionMean" class="">---</div>
+          <div id="windspeedMean" class="">---</div>
         </div>
       </div>
       <div class="d-flex flex-column flex-grow-1 p-1 element-border">
@@ -101,14 +101,14 @@
         <span class="text-black-50">GPS Information</span>
         <div class="d-flex flex-row">
           <ul class="list-group list-group-flush">
-            <li id="gpsLat" class="list-group-item">Lat</li>
-            <li id="gpsLon" class="list-group-item">Lon</li>
-            <li id="gpsAlt" class="list-group-item">Alt</li>
+            <li id="gpsLat" class="list-group-item">---</li>
+            <li id="gpsLon" class="list-group-item">---</li>
+            <li id="gpsAlt" class="list-group-item">---</li>
           </ul>
           <ul class="list-group list-group-flush">
-            <li id="gpsQuality" class="list-group-item">Quality</li>
-            <li id="gpsSatellites" class="list-group-item">Sats</li>
-            <li id="gpsHDOP" class="list-group-item">HDOP</li>
+            <li id="gpsQuality" class="list-group-item">---</li>
+            <li id="gpsSatellites" class="list-group-item">---</li>
+            <li id="gpsHDOP" class="list-group-item">---</li>
           </ul>
         </div>
       </div>
@@ -141,11 +141,11 @@
         class="d-flex flex-column justify-content-around element-border p-2 text-center"
       >
         <span class="text-black-50">Date & Time</span>
-        <div id="localDate">03.11.2020</div>
+        <div id="localDate">--.--.----</div>
         <span class="text-black-50">Local</span>
-        <div id="localTime">23:55</div>
+        <div id="localTime">--:--</div>
         <span class="text-black-50">UTC</span>
-        <div id="gpsTime">23:55</div>
+        <div id="gpsTime">--:--</div>
       </div>
       <div class="element-border p-1 float-right">
         <button id="settingsButton" type="button" class="btn btn-info">
