--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="./scripts/vendors/d3.min.js"></script>
     <script type="text/javascript" src="./scripts/vendors/d3fc.js"></script>
     <script type="text/javascript" src="./scripts/charts.js"></script>
+    <script type="text/javascript" src="./scripts/index.js"></script>
   </head>
   <body class="m-1 h-100">
     <div class="d-flex flex-row flex-wrap justify-content-between">
@@ -86,7 +87,7 @@
         <object type="image/svg+xml" data="./images/hsi.svg"></object>
         <div class="d-flex flex-row justify-content-around">
           <div class="text-black-50">Wind Direction [mean]</div>
-          <button id="buttonFromTo" type="button" class="btn btn-secondary">
+          <button id="fromToButton" type="button" class="btn btn-secondary">
             TO
           </button>
           <div class="text-black-50">Wind Speed [mean]</div>
@@ -153,12 +154,18 @@
         <span class="text-black-50">GPS UTC</span>
         <div id="gpsTime">--:--</div>
       </div>
-      <div class="element-border p-1 float-right">
+      <div class="d-flex flex-column justify-content-around element-border p-1">
         <button id="settingsButton" type="button" class="btn btn-info">
           Settings
         </button>
+        <button id="masterControlButton" type="button" class="btn btn-light">
+          MASTER
+        </button>
       </div>
     </div>
-    <script type="text/javascript" src="./scripts/index.js"></script>
+    <footer class="font-weight-lighter fix-bottom float-right">
+      WebMeteo v1.0, 2020 Michael Wolf
+    </footer>
+    <div id="noty" class="fixed-top m-1" style="max-width: fit-content"></div>
   </body>
 </html>
