Add link speed info.

--- a/client/index.html
+++ b/client/index.html
@@ -145,7 +145,7 @@
         </button>
       </div>
       <div
-        class="d-flex flex-column justify-content-around element-border p-2 text-center"
+        class="d-flex flex-column justify-content-start element-border p-2 text-center"
       >
         <span class="text-black-50">Date & Time</span>
         <div id="localDate">--.--.----</div>
@@ -161,6 +161,12 @@
         <button id="masterControlButton" type="button" class="btn btn-light">
           MASTER
         </button>
+      </div>
+      <div
+        class="d-flex flex-column justify-content-start element-border p-2 text-center"
+      >
+        <span class="text-black-50">Link</span>
+        <div id="linkSpeed">---</div>
       </div>
     </div>
     <footer class="font-weight-lighter fix-bottom float-right">
