Remove latency from time difference. GPS time and difference as double.

--- a/client/index.html
+++ b/client/index.html
@@ -186,10 +186,10 @@
       >
         <span class="text-black-50">Date & Time</span>
         <div id="localDate">--.--.----</div>
-        <span class="text-black-50">Local</span>
-        <div id="localTime">--:--</div>
-        <span class="text-black-50">GPS UTC</span>
-        <div id="gpsTime">--:--</div>
+        <span class="text-black-50">Local / GPS UTC</span>
+        <div id="localTime">--:--:-- / --:--:--</div>
+        <span class="text-black-50">Difference</span>
+        <div id="timeDifference">---</div>
       </div>
       <div class="d-flex flex-column justify-content-around element-border p-1">
         <button id="settingsButton" type="button" class="btn btn-info">
