--- a/client/index.html
+++ b/client/index.html
@@ -81,7 +81,7 @@
               class="form-control"
               id="runwayHeadingInput"
               min="0"
-              max="360"
+              max="359"
             />
           </div>
         </div>
@@ -191,10 +191,8 @@
       >
         <span class="text-black-50">Date & Time</span>
         <div id="localDate">--.--.----</div>
-        <span class="text-black-50">Station / GPS UTC</span>
+        <span class="text-black-50">MAWS / GPS UTC</span>
         <div id="localTime">--:--:-- / --:--:--</div>
-        <span class="text-black-50">Difference</span>
-        <div id="timeDifference">---</div>
       </div>
       <div
         class="d-flex flex-column justify-content-start element-border p-2 text-center"
@@ -202,7 +200,7 @@
         <span class="text-black-50">Link Speed</span>
         <div id="linkSpeed">---</div>
         <span class="text-black-50">Record Files</span>
-        <a href="#" class="btn btn-info stretched-link">Download</a>
+        <a href="#" class="btn btn-info">Download</a>
       </div>
     </div>
     <footer class="font-weight-lighter fix-bottom float-right">
