Activate link in download button.

--- a/client/index.html
+++ b/client/index.html
@@ -200,7 +200,7 @@
         <span class="text-black-50">Link Speed</span>
         <div id="linkSpeed">---</div>
         <span class="text-black-50">Record Files</span>
-        <a href="#" class="btn btn-info">Download</a>
+        <a href="../download/" target="_blank" class="btn btn-info">Download</a>
       </div>
     </div>
     <footer class="font-weight-lighter fix-bottom float-right">
