Add time sync button

--- a/client/index.html
+++ b/client/index.html
@@ -193,6 +193,7 @@
         <div id="localDate">--.--.----</div>
         <span class="text-black-50">MAWS / GPS UTC</span>
         <div id="localTime">--:--:-- / --:--:--</div>
+        <button id="timeSyncButton" class="btn btn-outline-light disabled" type="button">Sync MAWS</button>
       </div>
       <div
         class="d-flex flex-column justify-content-start element-border p-2 text-center"
